@@ -1,3 +1,11 @@
+2008-01-27  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-pokertable.py.in (MockService.saveHand): Added round5
+	test.
+	(MockService.loadHand): Added 'values' to the serials2chips dict.
+	(MockService.saveHand): Fixed showdown test since we now have two
+	showdowns.
+
 2008-01-26  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* tests/test-pokertable.py.in
